position on mobile fix

--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -9,15 +9,15 @@
   width: 100%;
   height: 100%;
   background-color: $modal-overlay-color;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 80px 0;
   margin: 0 auto;
   opacity: 1;
   will-change: opacity;
   transition: opacity 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
-  @include tablet {
-    overflow-x: hidden;
+  @include desktop {
+    overflow-y: hidden;
   }
 }
 .modal-card {
